--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
       Some logo
     </div>
     <ul class="links-header">
-      <li><a href="google.com">link-one</a></li>
-      <li><a href="google.com">link-two</a></li>
-      <li><a href="google.com">link-three</a></li>
+      <li><a href="https://www.google.com/" target="blank">link-one</a></li>
+      <li><a href="https://www.google.com/" target="blank">link-two</a></li>
+      <li><a href="https://www.google.com/" target="blank">link-three</a></li>
     </ul>
   </div>
 
   <div class="section1">
     <div class="left">
       <h1>Some text here</h1>
-      <p>some other text here bla bla main content yes sure okay coming soon don't worry.</p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam quod aliquam dignissimos alias hic molestiae necessitatibus est suscipit doloribus magni. Molestias aliquam ad tempore.</p>
       <button class="button">Click me</button>
     </div>
     <div class="right">
@@ -31,7 +31,7 @@
   </div>
 
   <div class="section2">
-    <div class="title"><h1>Some another boring title</h1></div>
+    <div class="title"><h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1></div>
     <div class="containers">
       <div class="container">
         <img src="./images/drawing3.png" alt="drawing1">
@@ -54,7 +54,7 @@
 
   <div class="section3">
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, rerum earum. Tempora totam quis repellendus explicabo illum eum modi, a facilis facere sunt suscipit repellat laboriosam est exercitationem rerum quas?</h1>
-    <p>-some boring text, Someone the Great</p>
+    <p>-some interesting text, Someone the Great</p>
   </div>
 
   <div class="section4">
