Update footer in index.html

--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
     </div>
   </div>
 
-  <div class="footer">Copyright © Weroni-K 2023</div>
+  <div class="footer">Copyright© 2023 Weroni-K All Rights Reserved.</div>
 </body>
 </html>
